--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <br>
         (5) Good luck! 🤞
         <br>
-        <button class="button">press to start</button>
+        <button class="button">click to start</button>
     </section>
     <section class="panel instructions">
         <span class="lives" id="padding">Lives = 3</span>
