--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     
     <section>
         <p class="instructions disappearing">
-        (1) Choose one of the five characters below by clicking on it
+        (1) Choose one of the five avatars below by clicking on it
         <br>
-        (2) Use your keyboard arrow keys to move your character around
+        (2) Use your keyboard arrow keys to move your avatar around
         <br>
-        (3) Your aim is to reach the water's edge safely to win 10 points
+        (3) Your aim is to reach the water's edge safely and get 10 points
         <br>
         (4) Be careful - if a bug hits you then you'll lose a life, a point & have to restart
         <br>
