--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <br>
         (2) Use your keyboard arrow keys to move your avatar around
         <br>
-        (3) Your aim is to reach the water's edge safely and get 10 points
+        (3) Your aim is to cross the busy road to reach the water's edge and get 10 points
         <br>
         (4) Be careful - if a bug hits you then you'll lose a life, a point & have to restart
         <br>
