--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </p>
     </section>
     
-    <section class="instructions">
+    <section class="instructions indicators disappear">
         <span class="lives padding"></span>
         <span class="score padding"></span>
     </section>
