--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
         <span id="five"><img src = 'images/char-princess-girl.png' alt='princess'></span>
     </ul>
 
-    <script src="js/resources.js" id="margins"></script>
+    <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
-    <script src="js/engine.js"></script>
+    <script src="js/engine.js" id="margins"></script>
 </body>
 </html>
