--- a/index.html
+++ b/index.html
@@ -46,6 +46,6 @@
 
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
-    <script src="js/engine.js" id="margins"></script>
+    <script src="js/engine.js"></script>
 </body>
 </html>
